--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
       href="https://unpkg.com/instantsearch.css@7/themes/satellite-min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-theme-classic"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
